syntax = "proto3";

package com.coralogix.metrics.metrics_tco;

import "google/protobuf/empty.proto";

message Rule {
  uint64 id = 1;
  string label = 2;
  string regex = 3;
}

message AddRequest {
  string label = 1;
  string regex = 2;
}

message DeleteRequest {
  uint64 rule_id = 1;
}

message GetResponse {
  repeated Rule rules = 1;
}

service MetricsTcoService {
  rpc Add(AddRequest) returns (google.protobuf.Empty) {}
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
  rpc Get(google.protobuf.Empty) returns (GetResponse) {}
}
